--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        
+        <title>Scenic Forest Vacations</title>
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="index.css">
     </head>
