--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Scenic Forest Vacations</title>
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="index.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         
