--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Scenic Forest Vacations</title>
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
     </head>
     <body>
         
