--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
             <img src="images/fern.svg" class="fern">
         </div>
         
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
